# py-opentranscriber

./: .gitignore  AutoTranscriber.spec  LICENSE.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflow/: build_windows.yml  main.yml
.github/workflows/: main.yml
src/opentranscriber/: __init__.py  __main__.py  cli.py  gui.py
src/transcriber/: cli.py  gui.py
